kube-spring-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-simple1
  labels:
    app: spring-simple
    type: spring
    app-type: backend
spec:
  selector:
    matchLabels:
      app: spring-simple
  template:
    metadata:
      labels:
        app: spring-simple
    spec:
      containers:
      - name: spring-simple
        image: andriim88/sb-simple:0.0.2
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: sb-simple1-service
  labels:
    service: spring-simple-service
spec:
  type: ClusterIP #NodePort
  selector:
    app: sb-simple
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    #nodePort: 32000
