ingress-cert-man-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aaa-andmal-ingress    # ingress name
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aaa.andmal.cyou     # domain URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sb-simple   # service name
            port:
              number: 8080
